implemenatation of GET

--- a/crud/views/index.jade
+++ b/crud/views/index.jade
@@ -22,8 +22,14 @@ html
       | If you click the &quot;Submit&quot; button, the form-data will be sent to a page called &quot;/action_page.php&quot;.
     
  
-
     a(href='/get-data') LOAD DATA
-    h1 SHOW DATA    
+    h1 SHOW DATA  
+    
+    p Id- #{ data[4]._id }
+    p Name- #{ data[4].name }
+    p Id- #{ data[4].address }
+    
+     
+    
    
     
