DELETE functonality implemented

--- a/crud/views/index.jade
+++ b/crud/views/index.jade
@@ -35,7 +35,7 @@ html
       |   Id:
       br
       |   
-      input#id(type='number', name='id')
+      input#id(type='text', name='id')
       |   
       br
       |   
