--- a/crud/views/index.jade
+++ b/crud/views/index.jade
@@ -1,67 +1,53 @@
 doctype html
 html
   body
-  
-    h1 Submit Data
-    form(action='/insert', method='post')
-      | First name:
-      br
-      |   
-      input#name(type='text', name='name')
-      |   
-      br
-      |   Last name:
-      br
-      |   
-      input#address(type='text', name='address')
-      |   
-      br
-      br
-      |   
-      input(type='submit', value='Submit')
-    |  
-    p
-      | If you click the &quot;Submit&quot; button, the form-data will be sent to a page called &quot;/action_page.php&quot;.
-  
- 
-    a(href='/get-data') LOAD DATA
-    h1 Show Data
-
-    
-    
-    h1 Delete Data
-    
-    form(action='/delete', method='post')
-      |   Id:
-      br
-      |   
-      input#id(type='text', name='id')
-      |   
-      br
-      |   
-      input(type='submit', value='delete')
-    
-    h1 Update Data
-
-    form(action='/update', method='post')
-      | First name:
-      br
-      |   
-      input#name(type='text', name='name')
-      |   
-      br
-      |   Address:
-      br
-      |   
-      input#address(type='text', name='address')
-      |   
-      br
-      |   Id:
-      br
-      |   
-      input#id(type='text', name='id')
-      |   
-      br
-      br
-      |   
-      input(type='submit', value='update')
+    h2(style='margin-left:30%') CRUD operations on MongoDB with Nodejs
+    .submit(style='background-color:grey;margin:10px;')
+      h1 Submit Data
+      form(action='/insert', method='post')
+        | First name:
+        br
+        input#name(type='text', name='name')
+        br
+        |   Last name:
+        br
+        input#address(type='text', name='address')
+        br
+        br
+        input(type='submit', value='Submit')
+      p
+        | If you click the "Submit" button, the form-data will be sent to a page /submit and date will be updated in mongodb database
+    .show(style='background-color:#b3bac6;margin:10px;')
+      h1 Show Data
+      a(href='/get-data') LOAD DATA
+      p
+        | If you click on load data, the /get-data route will be called and data can be seen on terminal
+    .delete(style='background-color:#dbced2;margin:10px;')
+      h1 Delete Data
+      form(action='/delete', method='post')
+        | Id:
+        br
+        input#id(type='text', name='id')
+        br
+        input(type='submit', value='delete')
+      p
+        | If you have to delete and _id, you have to enter the _id from database and hit delete,the data with its _id will be deleted
+    .update(style='background-color:#e2d0be;margin:10px;')
+      h1 Update Data
+      form(action='/update', method='post')
+        | First name:
+        br
+        input#name(type='text', name='name')
+        br
+        |   Address:
+        br
+        input#address(type='text', name='address')
+        br
+        |   Id:
+        br
+        input#id(type='text', name='id')
+        br
+        br
+        input(type='submit', value='update')
+      p
+        | If you want to update data, enter the details of previously selected _id or if the _id doesnt exits the new record will be created.
